fix(client) menu items centered on mobile device

--- a/apps/client/src/views/layout/styles/_menu.scss
+++ b/apps/client/src/views/layout/styles/_menu.scss
@@ -48,3 +48,9 @@
     }
   }
 }
+
+@media (max-width: 991px) {
+  .layout-menu a {
+    justify-content: center;
+  }
+}
